<resources>
    <string name="app_name">Fit Tracker</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login_welcome">Welcome to the Fit Tracker!\nPlease log in.</string>
    <string name="login">Login</string>
    <string name="go_back">Go Back</string>
    <string name="welcome_username">Create an Outfit!</string>
    <string name="past_outfits">Past Outfits</string>
    <string name="welcome_admin">Welcome Admin!</string>
    <string name="create_outfit">Create Outfit</string>
    <string name="add_remove_users">Add/Remove Users</string>
    <string name="admin_settings">Admin Settings</string>
    <string name="admin_settings_text">Admin Settings</string>
    <string name="logout">Logout</string>
    <string name="clear_user_log">Clear User Log</string>
    <string name="clear">Clear</string>
    <string name="cancel">Cancel</string>
    <string name="clear_log_prompt">Enter the username to clear all clothes and outfits.</string>
    <string name="clear_log_username_required">Please enter a username.</string>
    <string name="clear_log_confirm_message">This will permanently clear all clothes and outfits for %1$s.</string>
    <string name="clear_log_success">Cleared clothes and outfits for %1$s.</string>
    <string name="clear_log_admin_protected">Cannot clear data for an admin user.</string>
    <string name="clear_log_user_not_found">User not found.</string>
    <string name="left_carot"><![CDATA[<]]></string>
    <string name="add_clothes">Add Clothes</string>
    <string name="back">Back</string>
    <string name="usernameTitle">All Users</string>
    <string name="create_new_user">Create New User</string>
    <string name="usernameRecycle">Username</string>
    <string name="remove">Remove</string>
    <string name="no_past_outfits">No past outfits yet.</string>
    <string name="no_user_found">No logged-in user was found.</string>
    <string name="outfit_number">Outfit #%1$d</string>
</resources>
